--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -22,7 +22,7 @@ phases:
       - env
 
       # Install golint
-      - go get -u github.com/golang/lint/golint
+      #- go get -u github.com/golang/lint/golint
 
   pre_build:
     commands:
