--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -51,7 +51,7 @@ phases:
       - go build -o user/handler/list/ user/handler/list/main.go
 
       # Package our application with AWS SAM
-      - aws cloudformation package --template-file template.yml --s3-bucket ${S3_BUCKET} --output-template-file packaged.yml
+      - aws cloudformation package --template-file template.yaml --s3-bucket ${S3_BUCKET} --output-template-file packaged.yml
 
 artifacts:
   files:
